<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/relative_layout_border"
        android:padding="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/personTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:tag="regularFont"
            android:layout_marginTop="5dp"
            android:text="@string/adult"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/priceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:tag="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/green"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/servicesBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/twinButtonHeight"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/yellow_button_rect"
        android:text="@string/items"
        android:tag="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/middleGuideLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout2"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout2" />

    <Button
        android:id="@+id/offersBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/twinButtonHeight"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/yellow_button_rect"
        android:text="@string/offers"
        android:tag="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/middleGuideLine"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout2" />

    <android.support.constraint.Guideline
        android:id="@+id/middleGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</android.support.constraint.ConstraintLayout>