<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootSnack"
    tools:context=".Activities.ForgotPasswordActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/snippet_toolbar"/>


    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/verticalGuidelineMargin" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/verticalGuidelineMargin" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="50dp"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/userNameEditTxt"
        android:layout_width="0dp"
        android:layout_height="@dimen/viewsHeight"
        android:background="@drawable/edit_text_back"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/editTextStartPadding"
        android:paddingEnd="@dimen/editTextEndPadding"
        android:tag="regularFont"
        android:textColor="@color/black"
        android:textColorHint="@color/darkGrey"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />
    <TextView
        android:id="@+id/emailIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/iconStartMargin"
        android:textSize="@dimen/iconTextSize"
        android:textColor="@color/colorAccent"
        android:text="@string/emailIcon"
        android:tag="icon"
        android:padding="@dimen/iconTextPadding"
        app:layout_constraintBottom_toBottomOf="@+id/userNameEditTxt"
        app:layout_constraintStart_toStartOf="@+id/userNameEditTxt"
        app:layout_constraintTop_toTopOf="@+id/userNameEditTxt" />
    <Button
        android:id="@+id/sendBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/viewsHeight"
        android:background="@drawable/rounded_green_button"
        android:textColor="@color/white"
        android:text="@string/send"
        android:textAllCaps="false"
        android:tag="bold"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/horizontalTopGuidelineMargin" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/horizontalBottomGuidelineMargin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
      android:tag="regularFont"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:text="@string/password_recovery"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditTxt" />

    <include layout="@layout/video_loader_layout"/>
</android.support.constraint.ConstraintLayout>